# openMVS

./: .gitignore  CMakeLists.txt  P2PUtils.h  vcpkg.json
apps/DensifyPointCloud/: CMakeLists.txt  DensifyPointCloud.cpp
apps/InterfaceCOLMAP/: InterfaceCOLMAP.cpp
apps/InterfaceMVSNet/: CMakeLists.txt
apps/InterfaceMetashape/: InterfaceMetashape.cpp
apps/ReconstructMesh/: CMakeLists.txt  ReconstructMesh.cpp
apps/RefineMesh/: CMakeLists.txt
apps/Tests/: CMakeLists.txt
apps/TextureMesh/: CMakeLists.txt
apps/TransformScene/: CMakeLists.txt
apps/Viewer/: CMakeLists.txt  Scene.cpp
cgal-5.5.2/Point_set_processing_3/include/CGAL/: pca_estimate_normals.h
cgal-5.5.2/Point_set_processing_3/include/CGAL/Point_set_processing_3/internal/: Neighbor_query.h
cgal-5.5.2/Spatial_searching/include/CGAL/: Euclidean_distance.h  Kd_tree.h  Orthogonal_k_neighbor_search.h  Search_traits_adapter.h
libs/Common/: Random.h  Types.h  Util.h
libs/IO/: PLY.cpp  PLY.h
libs/MVS/: CMakeLists.txt  Common.h  DepthMap.cpp  DepthMap.h  Mesh.cpp  PatchMatchCUDA.cpp  PointCloud.cpp  PointCloud.h  Scene.cpp  Scene.h  SceneDensify.cpp  SceneDensify.h  SceneReconstruct.cpp  SemiGlobalMatcher.cpp
libs/MVS/attempt_1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MVS.vcxproj  MVS.vcxproj.filters  VCG.vcxproj  VCG.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  openMVS.sln
libs/MVS/attempt_1/MVS.dir/Debug/MVS.tlog/: CustomBuild.write.1.tlog  MVS.lastbuildstate
vcglib/: CMakeLists.txt
(+8 files in other folders)
